# Project-Remedy

./: .env.example  .gitignore  README.md  config.example.yaml  project_remedy.md  pyproject.toml
examples/: test_aso_bylaws.html  test_biology_adt.html  test_commencement.html  test_gpa_calculator.html  test_output.html  test_security_report.html
examples/test_aso_bylaws/: article-i.html  article-ii.html  article-iii.html  article-iv.html  article-ix.html  article-v.html  article-vi.html  article-vii.html  article-viii.html  article-x.html  article-xi-2.html  article-xi.html  article-xii.html  article-xiii.html  article-xiv.html  article-xv.html  article-xvi.html  article-xvii.html
examples/test_security_report/: i-preparation-of-crime-statistics.html  ii-crime-statistics.html  iii-timely-warning-policy.html  iv-how-to-report-crime.html  ix-monitoring-of-criminal-activities-off-campus.html  vi-campus-law-enforcement.html  vii-programs-regarding-security-procedures-and-practices.html  xi-disclosures-to-the-alleged-victim-of-a-crime-of-violence-or-a-non-forcible-sex-offense.html  xii-dating-violence-domestic-violence-sexual-assault-and-stalking.html  xiii-information-regarding-sex-offenders.html  xiv-emergency-response-and-evacuation-procedures-22-emergency-notification-procedures-22-testing-of-procedures.html  xv-appendix-a-california-definitions-of-dating-violence-domestic-violence-sexual-assault-and-stalking.html  (+5 more)
scripts/: process_biology_adt.py  process_commencement.py  process_gpa_calculator.py  process_security_report.py
tests/: test_converter.py
(+15 files in other folders)
